--- a/iOSwifi/Base.lproj/LaunchScreen.storyboard
+++ b/iOSwifi/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,44 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PUZ-sg-LzI">
+                                <rect key="frame" x="0.0" y="547" width="375" height="120"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_splash_start_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Vco-5i-4eg">
+                                        <rect key="frame" x="117.5" y="40" width="140" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="77c-TY-jhb"/>
+                                            <constraint firstAttribute="height" constant="40" id="Yp9-le-unE"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Vco-5i-4eg" firstAttribute="centerX" secondItem="PUZ-sg-LzI" secondAttribute="centerX" id="RLU-Wa-wpR"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="a3N-Vl-oWC"/>
+                                    <constraint firstAttribute="height" constant="120" id="az7-Uu-ui6"/>
+                                    <constraint firstAttribute="bottom" secondItem="Vco-5i-4eg" secondAttribute="bottom" constant="40" id="eoN-fV-k39"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PUZ-sg-LzI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NuO-qL-X15"/>
+                            <constraint firstItem="PUZ-sg-LzI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WeR-yX-CQw"/>
+                            <constraint firstItem="PUZ-sg-LzI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bfQ-vb-IYr"/>
+                            <constraint firstAttribute="trailing" secondItem="PUZ-sg-LzI" secondAttribute="trailing" id="gM9-Io-PhF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PUZ-sg-LzI" secondAttribute="bottom" id="vOo-lq-7e3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_splash_start_logo" width="140" height="40"/>
+    </resources>
 </document>
